# genie-claw

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
crates/genie-api/src/: routes.rs
crates/genie-common/src/: config.rs
crates/genie-core/: Cargo.toml
crates/genie-core/src/: agent_harness.rs  conversation.rs  lib.rs  main.rs  prompt.rs  prompt_sha.rs  repl.rs  runtime_boundary.rs  runtime_mode.rs  server.rs  telegram.rs  voice_loop.rs
crates/genie-core/src/llm/: mod.rs  openai_compat.rs  provider.rs
crates/genie-core/src/security/: injection.rs
crates/genie-core/src/tools/: actuation.rs  dispatch.rs
crates/genie-core/src/voice/: streaming.rs
crates/genie-core/tests/: prompt_sha_test.rs  tool_dispatch_test.rs  tool_gate_integration_test.rs
crates/genie-ctl/: Cargo.toml
crates/genie-ctl/src/: main.rs
crates/genie-governor/src/: governor.rs  service_ctl.rs
crates/genie-health/src/: checker.rs
deploy/: setup-jetson.sh
deploy/config/: geniepod.dev.toml  geniepod.toml
deploy/systemd/: genie-llm-warmup.service
