[package]
name = "genie-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local home AI runtime for GeniePod Home — prompt engine, tools, memory, voice loop, and local APIs."

[lib]
name = "genie_core"
path = "src/lib.rs"

[[bin]]
name = "genie-core"
path = "src/main.rs"

[features]
default = ["telegram", "llama-cpp", "genie-ai-runtime", "voice"]
telegram = []
# LLM backend feature surface (declared per issue #32 closeout).
# Both default-on so today's builds are byte-identical.
# Per-backend `#[cfg]` gating of the modules and constructors will land
# alongside the CI matrix from issue #34, so a `--no-default-features`
# regression is caught automatically rather than silently bit-rotting.
llama-cpp = []
genie-ai-runtime = []
# Voice subsystem (issue #41). Gates the STT/TTS/AEC/wakeword pipeline,
# the `VoiceOrchestrator`, and the `voice_loop::run` dispatcher. Default-on
# so today's Jetson builds are byte-identical; `--no-default-features`
# (or `--no-default-features --features telegram,llama-cpp,...`) produces
# a chat-only binary that builds on macOS / Windows hosts which don't
# have ALSA. A voice-tagged `geniepod.toml` still deploys cleanly: the
# runtime logs one warning and falls through to the chat path.
voice = []

[dependencies]
genie-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
libc = { workspace = true }
libloading = "0.8"
toml = { workspace = true }
genie-skill-sdk = { path = "../genie-skill-sdk" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
# CSPRNG for actuation confirmation tokens (see crates/genie-core/src/tools/actuation.rs).
# Already in the resolved graph via rustls/quinn, so this adds no new third-party crate.
getrandom = "0.3"

[dev-dependencies]
toml = { workspace = true }
