[package]
name = "genie-ctl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GeniePod CLI — device management, status, chat, governor control"

[[bin]]
name = "genie-ctl"
path = "src/main.rs"

[features]
# Mirrors the `voice` feature on genie-core (issue #41). Default-on so
# today's `cargo build` produces the same binary; turning it off
# (`cargo build -p genie-ctl --no-default-features`) drops the `speaker`
# subcommand so the CLI builds against a chat-only genie-core too.
default = ["voice"]
voice = ["genie-core/voice"]

[dependencies]
genie-common = { workspace = true }
genie-core = { path = "../genie-core", default-features = false }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
